# sms-groups-gui

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  sms_groups_config.yaml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  rest_server.rs  rest_service.rs
crates/api/src/db_backend/: core.rs  mod.rs  surrealdb.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  mongodb.rs  paths.rs  test_connection.rs  test_containers.rs
crates/common/src/config/: api.rs  core.rs  instrumentation.rs  misc.rs  mod.rs  observability.rs
crates/common/src/config/api/: core.rs  mod.rs  mongodb.rs  open_api.rs  root_credentials.rs  surrealdb.rs
crates/common/src/db_backend/: core.rs  default_backend.rs  document.rs  mod.rs  surrealdb.rs  test_suite.rs
crates/common/src/db_backend/surrealdb/: core.rs  mod.rs  test_conainer.rs
crates/common/src/instrumentation/: core.rs  layers.rs  mod.rs
crates/common/src/observability/: core.rs  layers.rs  mod.rs
crates/common/src/structs/: admin.rs  mod.rs  organization.rs
crates/gui/: Cargo.toml
