[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Gabriel Hansson <gabrielhansson00@gmail.com>"]
repository = "https://github.com/gibbz00/sms-groups-gui"
exclude = ["/.github"]
edition = "2021"
readme = "README.md"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
# chrono = { version = "0.4", features = ["serde"] }
# derive_more = "0.99"
poem = { version = "2", features = ["anyhow"] }
poem-openapi = { version = "4", features = ["uuid", "chrono", "swagger-ui"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1" }
tracing = "0.1"
tracing-panic = "0.1.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pathdiff = "0.2"
