[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Gabriel Hansson <gabrielhansson00@gmail.com>"]
repository = "https://github.com/gibbz00/sms-groups-gui"
exclude = ["/.github"]
edition = "2021"
readme = "README.md"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
bson = "2.9"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
hmac = "0.12"
futures = "0.3"
mongodb = { version = "2.8", features = ["tracing-unstable"] }
jwt = "0.16"
pathdiff = "0.2"
poem = { version = "2", features = ["anyhow"] }
poem-openapi = { version = "4", features = ["swagger-ui", "bson"] }
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
strum = { version = "0.26", features = ["derive"] }
testcontainers = "0.15"
testcontainers-modules = "0.3.2"
tokio = { version = "1" }
tracing = "0.1"
tracing-appender = "0.2"
tracing-panic = "0.1.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }

[workspace.lints.rust]
unused_must_use = "deny"
