[package]
name = "sms-groups-api"
authors.workspace = true
repository.workspace = true
exclude.workspace = true
edition.workspace = true
readme.workspace = true
version.workspace = true

[features]
default = ["surrealdb"]
surrealdb = ["dep:surrealdb"]

[lints]
workspace = true

[dependencies]
sms-groups-common = { path = "../common" }

anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
poem.workspace = true
poem-openapi.workspace = true

# SURREALDB
surrealdb = { workspace = true, optional = true }
