[package]
name = "sms-groups-api"
authors.workspace = true
repository.workspace = true
exclude.workspace = true
edition.workspace = true
readme.workspace = true
version.workspace = true

[[bin]]
name = "sms-groups-api"
path = "src/bin/serve_api.rs"

[[bin]]
name = "seed-sms-groups-api"
path = "src/bin/seed_root.rs"

[lints]
workspace = true

[dependencies]
sms-groups-common = { path = "../common" }

anyhow.workspace = true
bson.workspace = true
futures.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
uuid.workspace = true
poem.workspace = true
poem-openapi.workspace = true
