[package]
name = "sms-groups-common"
authors.workspace = true
repository.workspace = true
exclude.workspace = true
edition.workspace = true
readme.workspace = true
version.workspace = true

[features]
test-utils = ["dep:testcontainers", "dep:testcontainers-modules"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bson.workspace = true
derive_more.workspace = true
futures.workspace = true
mongodb.workspace = true
poem-openapi.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-panic.workspace = true
tracing-subscriber.workspace = true


# TEST_UTILS
testcontainers = { workspace = true, optional = true }
testcontainers-modules = { workspace = true, optional = true, features = ["mongo"] }

[dev-dependencies]
pathdiff.workspace = true
tokio.workspace = true
