[package]
name = "sms-groups-gui"
version.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
exclude.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
# serde.workspace = true
# thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
