[package]
name = "sms-groups-gui"
authors.workspace = true
repository.workspace = true
exclude.workspace = true
edition.workspace = true
readme.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
# serde.workspace = true
# thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
